# marsettler

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum  index.html  main.go
.github/workflows/: benchmark.yml  release.yaml
Client/: .clang-format  Marsettler.uproject
Client/Config/: DefaultEngine.ini  DefaultInput.ini
Client/Source/: MarsettlerEditor.Target.cs
Message/: Header.fbs  Login.fbs  LoginResponse.fbs  MovePush.fbs  MoveReq.fbs  MoveRes.fbs  MsgActor.fbs  MsgActorPush.fbs  MsgLoginReq.fbs  MsgLoginRes.fbs  MsgMovePush.fbs  MsgMoveReq.fbs  MsgMoveRes.fbs  MsgVector.fbs  Vector.fbs
Server/: .clang-format  .gitignore  Build.bat  CMakeLists.txt
Server/Source/: Connection.cpp  Connection.h  Main.cpp  Server.cpp
Server/Source/Engine/: CMakeLists.txt  Worker.cpp  Worker.h
Server/Source/Engine/Math/: Vector.h
Server/Source/Engine/Network/: Connection.cpp  Connection.h
Server/Source/Engine/World/: Actor.cpp  Actor.h  NetworkActor.cpp  NetworkActor.h  World.cpp  World.h
Server/Source/Message/: CMakeLists.txt  Header_generated.h  LoginResponseBuilder_generated.h  LoginResponse_generated.h  Login_generated.h  Message.cpp  Message.h  MessageBuilder.h  MessageID.h  MovePush_generated.h  MoveReq_generated.h  MoveRes_generated.h  MsgActorPushBuilder.cpp  MsgActorPushBuilder.h  MsgActorPush_generated.h  MsgActor_generated.h  MsgLoginResBuilder_generated.cpp  MsgLoginResBuilder_generated.h  MsgLoginRes_generated.h  MsgMovePushBuilder.cpp  MsgMovePushBuilder.h  MsgMovePush_generated.h  Vector_generated.h
Server/Source/Server/: CMakeLists.txt  Context.cpp  Context.h  Main.cpp
Server/Source/Server/Engine/World/: Actor.cpp  Actor.h  World.cpp  World.h
Server/Source/Server/MessageHandler/: LoginHandler.cpp  LoginHandler.h  MessageHandler.cpp  MessageHandler.h  MsgLoginReqHandler.cpp  MsgLoginReqHandler.h  MsgMoveReqHandler.cpp  MsgMoveReqHandler.h
Server/Source/Server/Network/: Connection.cpp  Connection.h  Server.cpp  Server.h
Tool/FormatOnSave/: FormatOnSave.csproj  FormatOnSave.sln  FormatOnSave.vsix  FormatOnSavePackage.cs  source.extension.vsixmanifest
Tool/GenerateMessage/: go.mod  main.go
bevy_prototype_lyon/: Cargo.toml
bevy_prototype_lyon/src/: main.rs
client/: Marsettler.uproject  client.go  main.go  menu.go
client/Config/: DefaultGame.ini
client/Source/: Marsettler.Target.cs
client/asset/: asset.go  blueberry.go  building.go  city_hall.go  cityhall.go  cursor.go  grass.go  worker.go
client/conn/: conn.go
client/ctx/: ctx.go
client/game/: actor.go  edge.go  image.go  node.go  space.go  world.go
client/handler/: actors_handler.go  handler.go  login_result_handler.go  node_handler.go  world_handler.go
client/main/: main.go
client/renderer/: image.go  renderer.go
client/resource/: cursor.go
client/ui/: cursor.go  layer.go  menu.go
cmd/generate/: main.go
cmd/lumberjack/: main.go
cmd/marsettler/: main.go
core/ai/: behavior_tree.go  composite.go  decorator.go  node.go  service.go  state.go
core/asset/: asset.go
core/behavior_tree/: behavior_tree.go  blackboard.go  composite.go  decorator.go  node.go  parallel.go  root.go  selector.go  sequence.go  service.go  state.go
core/graph/: edge.go  graph.go  graph_test.go  node.go  path.go
core/id_generator/: id_generator.go
core/net/: client.go  server.go  user.go
data/: actor.go  button.go
docs/: benchmarks.json  index.html
game/: node.go  user.go
hanabi/: Cargo.toml
lumberjack/: Cargo.toml
message/: Actor.go  ActorMove.go  Vector.go  actor.go  actor_test.go  builder.go  message.go  message.pb.go  message.proto  sign_in_request.fbs
object/: actor.go
pkg/ai/: ai.go  (+7 more)
server/: go.mod  go.sum  main.go  server.go
snake/: Cargo.toml  main.rs
snake_v2/: README.md  food.rs  leaderboard.rs  main.rs  snake.rs  status.rs  ui.rs
(+367 files in other folders)
