[package]
name = "marsettler"
version = "0.1.2"
edition = "2021"

[dependencies]
avian2d = "0.2.0"
bevy = "0.15.0"
rand = "0.8.5"

[[bin]]
name = "guessing_game"
path = "guessing_game/main.rs"

[[bin]]
name = "lumberjack"
path = "lumberjack/main.rs"

[[bin]]
name = "snake"
path = "snake/main.rs"

[[bin]]
name = "snake_v2"
path = "snake_v2/main.rs"
